@@ -545,8 +545,17 @@ void init_accept(void)
 #define EXTERNAL_BLOCK 1
 
 #if EXTERNAL_BLOCK
-// siegelring -- directory, not detected as directory.
+uint32_t someones_inode_count = std::numeric_limits<uint32_t>::max();
+
+// Ian Jacobi's '\\' file.
 unsigned char someones_block[4096] = {
+  0x21, 0x47, 0xf1, 0x00, 0x0c, 0x00, 0x01, 0x02, 0x2e, 0x00, 0x00, 0x00, 0x20, 0x47, 0xf1, 0x00,
+  0x0c, 0x00, 0x02, 0x02, 0x2e, 0x2e, 0x00, 0x00, 0x22, 0x47, 0xf1, 0x00, 0xe8, 0x0f, 0x01, 0x02,
+  0x5c, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+  0
+};
+// siegelring -- directory, not detected as directory.
+unsigned char someones_block1[4096] = {
   0x34, 0xba, 0x08, 0x00, 0x0c, 0x00, 0x01, 0x02, 0x2e, 0x00, 0x00, 0x00, 0x2d, 0xba, 0x08, 0x00,
   0x0c, 0x00, 0x02, 0x02, 0x2e, 0x2e, 0x00, 0x00, 0x35, 0xba, 0x08, 0x00, 0x18, 0x00, 0x0d, 0x01,
   0x56, 0x65, 0x72, 0x73, 0x75, 0x63, 0x68, 0x30, 0x2e, 0x66, 0x6f, 0x72, 0x6d, 0x00, 0x00, 0x00,
@@ -981,10 +990,8 @@ is_directory_type is_directory(unsigned char* block, int blocknr, DirectoryBlock
       delayed_warning.stream() << "\"; block: " << blocknr << "; offset 0x" << std::hex << offset << std::dec << ")\n";
     }
   }
-#if !EXTERNAL_BLOCK
   if (dir_entry->inode > inode_count_)
     return isdir_no;	// Inode out of range.
-#endif
   // File names are at least 1 character long.
   if (dir_entry->name_len == 0)
     return isdir_no;
@@ -1498,7 +1505,10 @@ void run_program(void)
 	assert(block_size_ == sizeof(someones_block));
 	std::memcpy(block, someones_block, block_size_);
 	DirectoryBlockStats stats;
-	is_directory_type isdir = is_directory(block, commandline_block, stats, false);
+	int blocknr = commandline_block;
+	commandline_block = -1;
+	inode_count_ = someones_inode_count;
+	is_directory_type isdir = is_directory(block, blocknr, stats, false);
 	std::cout << "is_directory returned " << isdir << " for someones_block." << std::endl;
 	exit(EXIT_SUCCESS);
       }
@@ -4442,6 +4452,22 @@ std::vector<int> extended_blocks;
 
 #define INCLUDE_JOURNAL 1
 
+// Returns true if file 'cachename' does not end
+// on '# END\n'.
+bool does_not_end_on_END(std::string const& cachename)
+{
+  // Open the file.
+  std::ifstream cache;
+  cache.open(cachename.c_str());
+  // Seek to the end minus 6 positions.
+  cache.seekg(-6, std::ios::end);
+  char last_line[6];
+  cache.getline(last_line, sizeof(last_line));
+  bool does_not = strcmp(last_line, "# END") != 0;
+  cache.close();
+  return does_not;
+}
+
 void init_dir_inode_to_block_cache(void)
 {
   if (dir_inode_to_block_cache)
@@ -4458,7 +4484,12 @@ void init_dir_inode_to_block_cache(void)
   std::string cache_stage1 = device_name_basename + ".ext3grep.stage1";
   struct stat sb;
   bool have_cache = !(stat(cache_stage1.c_str(), &sb) == -1);
-  if (!have_cache && errno != ENOENT)
+  if (have_cache)
+  {
+    if (does_not_end_on_END(cache_stage1))
+      have_cache = false;
+  }
+  else if (errno != ENOENT)
   {
     int error = errno;
     std::cout << std::flush;
@@ -4523,6 +4554,7 @@ void init_dir_inode_to_block_cache(void)
     cache << "# Extended directory blocks.\n";
     for (std::vector<int>::iterator iter = extended_blocks.begin(); iter != extended_blocks.end(); ++iter)
       cache << *iter << '\n';
+    cache << "# END\n";
     cache.close();
   }
   else
@@ -5086,7 +5118,12 @@ void init_directories(void)
   std::string cache_stage2 = device_name_basename + ".ext3grep.stage2";
   struct stat sb;
   bool have_cache = !(stat(cache_stage2.c_str(), &sb) == -1);
-  if (!have_cache && errno != ENOENT)
+  if (have_cache)
+  {
+    if (does_not_end_on_END(cache_stage2))
+      have_cache = false;
+  }
+  else if (errno != ENOENT)
   {
     int error = errno;
     std::cout << std::flush;
@@ -5327,21 +5364,6 @@ void init_directories(void)
       for (std::vector<uint32_t>::iterator block_number_iter = block_numbers.begin();
           block_number_iter != block_numbers.end(); ++block_number_iter, ++directory_block_iter)
 	directory_block_iter->read_block(*block_number_iter, directory_block_iter);
-    }
-    // Read any last line.
-    cache.clear();
-    char last_line[16];
-    cache.getline(last_line, sizeof(last_line));
-    if (strcmp(last_line, "# END"))
-    {
-      std::cout << std::endl;
-      std::cerr << "ERROR: " << cache_stage2 << " does not end on \"# END\" this could mean:\n";
-      std::cerr << "1) You just upgraded to a version higher than 0.3.1 and/or higher than SVN Revision 40.\n";
-      std::cerr << "2) You ran this program before but it was terminated before finishing stage2.\n";
-      std::cerr << "If you are sure that this stage2 cache file was generated by an older\n";
-      std::cerr << "version and is OK, append a line '# END' to it (echo \"# END\" >> " << cache_stage2 << ").\n";
-      std::cerr << "If unsure, delete " << cache_stage2 << " and run the program again." << std::endl;
-      exit(EXIT_FAILURE);
     }
     cache.close();
     std::cout << " done\n";
